src/objects/c2g__codaBankAccount__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpbankaccount</customHelpPage>
    <description>Stores master details on company bank accounts.</description>
    <fields>
        <fullName>c2g__AccountName__c</fullName>
        <label>Account Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__AccountNumber__c</fullName>
        <label>Account Number</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccountCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Bank Accounts</relationshipLabel>
        <relationshipName>BankAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankChargesDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Charges Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Bank Accounts (Bank Charges)</relationshipLabel>
        <relationshipName>BankAccountsBC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankChargesDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Charges Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Bank Accounts (Bank Charges)</relationshipLabel>
        <relationshipName>BankAccountsBC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankChargesDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Charges Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Bank Accounts (Bank Charges)</relationshipLabel>
        <relationshipName>BankAccountsBC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankChargesGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Charges GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Bank Accounts (Bank Charges GLA)</relationshipLabel>
        <relationshipName>BankAccountsBC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankName__c</fullName>
        <label>Bank Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Bank Accounts (Dimension 1)</relationshipLabel>
        <relationshipName>Bank_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Bank Accounts (Dimension 2)</relationshipLabel>
        <relationshipName>Bank_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Bank Accounts (Dimension 3)</relationshipLabel>
        <relationshipName>Bank_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DirectDebitOriginatorReference__c</fullName>
        <label>Direct Debit Originator Reference</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipName>BankAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__IBANNumber__c</fullName>
        <label>IBAN</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__InterestPaidDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interest Paid Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Bank Accounts (Interest Paid)</relationshipLabel>
        <relationshipName>BankAccountsIP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__InterestPaidDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interest Paid Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Bank Accounts (Interest Paid)</relationshipLabel>
        <relationshipName>BankAccountsIP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__InterestPaidDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interest Paid Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Bank Accounts (Interest Paid)</relationshipLabel>
        <relationshipName>BankAccountsIP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__InterestPaidGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interest Paid GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Bank Accounts (Interest Paid GLA)</relationshipLabel>
        <relationshipName>BankAccountsIP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__InterestReceivedDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interest Received Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Bank Accounts (Interest Received)</relationshipLabel>
        <relationshipName>BankAccountsIR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__InterestReceivedDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interest Received Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Bank Accounts (Interest Received)</relationshipLabel>
        <relationshipName>BankAccountsIR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__InterestReceivedDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interest Received Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Bank Accounts (Interest Received)</relationshipLabel>
        <relationshipName>BankAccountsIR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__InterestReceivedGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interest Received GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Bank Accounts (Interest Received GLA)</relationshipLabel>
        <relationshipName>BankAccountsIR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Bank Accounts</relationshipLabel>
        <relationshipName>BankAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>c2g__ReportingCode__c</fullName>
        <label>Reporting Code</label>
        <length>24</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__SWIFTNumber__c</fullName>
        <label>SWIFT Number</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SortCode__c</fullName>
        <label>Sort Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__StateProvince__c</fullName>
        <label>State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Street__c</fullName>
        <label>Street</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ZipPostalCode__c</fullName>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Bank Account</label>
    <listViews>
        <fullName>FF_Fly_Now_Pay_Later_Limited_06936813_codaBankAccount</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Fly Now Pay Later Limited (06936813)</label>
        <queue>FF_Fly_Now_Pay_Later_Limited_06936813</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_Limited_codaBankAccount</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund Limited</label>
        <queue>FF_Travelfund_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_co_uk_Limited_codaBankAccount</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund.co.uk Limited</label>
        <queue>FF_Travelfund_co_uk_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__AccountName__c</columns>
        <columns>c2g__AccountNumber__c</columns>
        <columns>c2g__BankName__c</columns>
        <columns>c2g__ReportingCode__c</columns>
        <columns>c2g__GeneralLedgerAccount__c</columns>
        <columns>c2g__BankAccountCurrency__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bank Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Accounts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>